refine responsiveness, adjust colour styles, add priority number, and fix font family issues on safari

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@
   justify-content: center;
   align-items: center;
 }
+
+body {
+  font-family: sans-serif;
+}
