--- a/src/components/Pages/Page.css
+++ b/src/components/Pages/Page.css
@@ -14,7 +14,7 @@
     width: 90vw;
     max-width: 80rem;
     /* height: 46.75rem; */
-    height: 70vh;
+    height: 80vh;
     border-radius: 1.56rem;
     background: #F6F6F6;
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
@@ -31,7 +31,7 @@
     width: 100%;
     /* height: 96.617px; */
     /* height: 6.038rem; */
-    min-height: 15%;
+    min-height: 13%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -48,10 +48,9 @@
     background-color: transparent;
     border: none;
     color: #C0C0C0;
-    font-family: SF Pro Display;
     font-size: 1.25rem;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
     text-transform: lowercase;
     transition: all .6s cubic-bezier(0.25, 1, 0.5, 1);
@@ -59,14 +58,12 @@
 
 #streamline-button:hover {
     cursor: pointer;
-    transform: scale(1.06);
 }
 
 .priority-text {
     color: #FFF;
-    font-family: SF Pro Display;
     /* font-size: 30px; */
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
@@ -97,99 +94,15 @@
     border-radius: 100%;
     border: 0;
     transition: all .6s cubic-bezier(0.25, 1, 0.5, 1);
-    font-family: SF Pro Display;
     font-size: 1rem;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .priority-button:hover {
     cursor: pointer;
     transform: scale(1.02);
     opacity: 70%;
-}
-
-
-#todos-container {
-    margin: 0;
-    padding: 0;
-    padding: 1.56rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100%;
-    overflow-y: auto;
-    overflow-x: hidden;
-}
-
-.todo {
-    margin: 0;
-    padding: 0;
-    padding-left: 0.375rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 0.75rem;
-    height: 100%;
-    width: 100%;
-    transition: all .2s cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.todo:hover {
-    background: #f1f1f1;
-    border-radius: 0.625rem;
-}
-
-.todo-button {
-    width: 1.56rem;
-    height: 1.56rem;
-    border-radius: 0.1875rem;
-    border: 0.0625rem solid;
-    background: #FFF;
-    transition: all .2s cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.todo-text {
-    color: #201B20;
-    font-family: SF Pro Display;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: normal;
-    transition: all .2s cubic-bezier(0.25, 1, 0.5, 1);
-    width: 100%;
-}
-
-.checked-todo-button {
-    width: 1.56rem;
-    height: 1.56rem;
-    border-radius: 3px;
-    border: 0.0625rem solid #201B20;
-    background: #201B20;
-    transition: all .2s cubic-bezier(0.25, 1, 0.5, 1);
-}
-
-.todo-header-text {
-    font-family: SF Pro Display;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    transition: all .2s cubic-bezier(0.25, 1, 0.5, 1);
-    text-decoration: underline;
-}
-
-#todo-text-editing {
-    outline: none;
-    border-style: none;
-    box-sizing: content-box;
-    background-color: transparent;
-    margin-top: 0.9375rem;
-    margin-bottom: 0.9375rem;
-    width: 100%;
-    opacity: 0.7;
 }
 
 @media only screen and (max-width: 540px) {
